--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -29,4 +29,5 @@ ENV PORT=8000
 EXPOSE 8000
 
 # Start (ASCII hyphens only!)
-CMD ["python","-m","uvicorn","app:app","--host","0.0.0.0","--port","${PORT}","--log-level","info"]
+CMD ["sh","-lc","python -m uvicorn app:app --host 0.0.0.0 --port ${PORT:-8000} --log-level info"]
+
