Update CMD instruction in Dockerfile for Uvicorn

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -29,6 +29,7 @@ ENV PORT=8000
 EXPOSE 8000
 
 # Start (ASCII hyphens only!)
-CMD ["python","-c","import os,uvicorn,app; uvicorn.run(app.app, host='::', port=int(os.environ.get('PORT','8000')), log_level='info')"]
+CMD ["sh","-lc","python -m uvicorn app:app --host :: --port ${PORT:-8000} --log-level info"]
+
 
 
