Modify Docker CMD to use Python and change port
Updated CMD instruction to use Python directly and changed port to 8080 with a keep-alive timeout.

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -29,8 +29,7 @@ ENV PORT=8000
 EXPOSE 8000
 
 # Start (ASCII hyphens only!)
-CMD ["sh","-lc","python -m uvicorn app:app --host 0.0.0.0 --port ${PORT:-8000} --log-level info"]
-
+CMD ["python", "-m", "uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080", "--log-level", "info", "--timeout-keep-alive", "75"]
 
 
 
